# TrixelManagementService

./: .gitignore  .yamllint  README.md  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: cd.yaml  ci.yaml
client_generator/: .gitignore  generate_client.py  openapi-generator-config.yaml  readme_prefix.md  requirements.txt
src/: common.py  config_schema.py  crud.py  database.py  exception.py  logging_helper.py  model.py  schema.py  tls_manager.py  trixelmanagementserver.py
src/measurement_station/: crud.py  measurement_station.py  model.py  schema.py
src/privatizer/: blank_privatizer.py  combined_privatizers.py  common.py  config_schema.py  correlation_evaluating_privatizer.py  crud.py  latest_privatizer.py  manager.py  naive_average_privatizer.py  naive_kalman_privatizer.py  privatizer.py  schema.py
tests/: conftest.py  test_app.py  test_management_station.py  test_tls_manager.py
